unpackaged/main/default/objects/Portal_File_Types__c/Portal_File_Types__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Portal File Types</label>
</CustomObject>