unpackaged/main/default/objects/Portal_File_Types__c/fields/Shown_on_Equipment_Leasing__c.field-meta.xml
<CustomField>
    <fullName>Shown_on_Equipment_Leasing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shown on Equipment Leasing</label>
    <type>Checkbox</type>
</CustomField>