unpackaged/main/default/objects/Portal_File_Types__c/fields/Shown_on_Merchant_Cash_Advance__c.field-meta.xml
<CustomField>
    <fullName>Shown_on_Merchant_Cash_Advance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shown on Merchant Cash Advance</label>
    <type>Checkbox</type>
</CustomField>