unpackaged/main/default/objects/Portal_File_Types__c/fields/Shown_on_Small_Business_Loans__c.field-meta.xml
<CustomField>
    <fullName>Shown_on_Small_Business_Loans__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shown on Small Business Loans</label>
    <type>Checkbox</type>
</CustomField>