unpackaged/main/default/objects/Portal_File_Types__c/fields/Shown_on_Vendor_Advantage__c.field-meta.xml
<CustomField>
    <fullName>Shown_on_Vendor_Advantage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shown on Vendor Advantage</label>
    <type>Checkbox</type>
</CustomField>