unpackaged/main/default/objects/Portal_File_Types__c/fields/Working_Capital_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Working_Capital_Display_Order__c</fullName>
    <label>Working Capital Display Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>